unpackaged/objects/Capstone_Module_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capstone_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capstone Module</label>
        <referenceTo>Capstone_Module__c</referenceTo>
        <relationshipLabel>Capstone Module Activities</relationshipLabel>
        <relationshipName>Capstone_Module_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Capstone Module Activity</label>
    <nameField>
        <displayFormat>CMA-{0000000000}</displayFormat>
        <label>Capstone Module Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capstone Module Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>